# 17-vlsi-eda-viewer

./: README.md  debug_def.py  debug_pin.py  test_backend.py  test_def_small.py  test_output.txt
backend/: pyproject.toml
backend/app/: demo.py  main.py
backend/app/api/: routes.py
backend/app/core/: database_service.py  def_models.py  models.py
backend/app/drc/: __init__.py  drc_engine.py  drc_rules.py
backend/app/parsers/: def_lexer.py  def_parser.py  lef_lexer.py  lef_parser.py
backend/app/spatial/: quadtree.py  spatial_index.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: camera.js  main.js  renderer.js  style.css  tile_manager.js
